plugins {
    id 'java'
    id 'jacoco'
    id 'application'
}

application {
    mainClass = 'ru.nsu.ziabkin.Demo'
}

run {
    standardInput = System.in
}

group = 'ru.nsu.ziabkin'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}


dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}